[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day_one"
path = "src/day_one/main.rs"

[[bin]]
name = "day_two"
path = "src/day_two/main.rs"

[[bin]]
name = "utils"
path = "src/utils.rs"