[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
lazy_static = "1.4.0"
itertools = "0.12.0"

[[bin]]
name = "day_one"
path = "src/day_one/main.rs"

[[bin]]
name = "day_two"
path = "src/day_two/main.rs"

[[bin]]
name = "day_three"
path = "src/day_three/main.rs"

[[bin]]
name = "day_four"
path = "src/day_four/main.rs"

[[bin]]
name = "day_five"
path = "src/day_five/main.rs"


[[bin]]
name = "day_six"
path = "src/day_six/main.rs"

[[bin]]
name = "day_seven"
path = "src/day_seven/main.rs"

[[bin]]
name = "day_eight"
path = "src/day_eight/main.rs"

[[bin]]
name = "day_nine"
path = "src/day_nine/main.rs"

[[bin]]
name = "day_ten"
path = "src/day_ten/main.rs"

[[bin]]
name = "day_eleven"
path = "src/day_eleven/main.rs"

[[bin]]
name = "day_twelve"
path = "src/day_twelve/main.rs"

[[bin]]
name = "day_13"
path = "src/day_13/main.rs"

[[bin]]
name = "utils"
path = "src/utils.rs"